--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,8 @@ jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
         env:
-            BUCKET_NAME: www.zeeshanahmedclifton1.com
-            AWS_REGION: us-east-1
+            BUCKET_NAME: githubactionsdeployment 
+            AWS_REGION: eu-north-1
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
@@ -32,7 +32,7 @@ jobs:
               with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-region: ${{ env.AWS_REGION }}
+                  aws-region: eu-north-1 
 
             - name: Create S3 bucket if not exists
               run: |
